<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thanhtam.appmultilang.MainActivity">

    <TextView
        android:textColor="#ff0"
        android:textSize="36dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tieuDeForm"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:hint="@string/hintHoTen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextHoten"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:hint="@string/hintEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEmail"
        android:layout_below="@+id/editTextHoten"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextHoten"
        android:layout_alignEnd="@+id/editTextHoten" />

    <EditText
        android:hint="@string/hintSDT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextSDT"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextEmail"
        android:layout_alignEnd="@+id/editTextEmail" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textbtnXacNhan"
        android:id="@+id/buttonXacnhan"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=" "
        android:id="@+id/textViewThongtin"
        android:layout_below="@+id/buttonXacnhan"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />
</RelativeLayout>
